# ASCII-MEDIA

./: .gitignore  .replit  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  QUICK_START.md  README.md  TECHNICAL.md  TESTING_REPORT.md  ascii-media  build.rs  build.sh  comprehensive_test.sh  doc.md  install.sh  replit.md  test_all_features.sh  test_aspect_ratio.sh  test_custom_dimensions.sh  test_proportions.sh  uninstall.sh
.ccls-cache/@@home@runner@workspace/: @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno-base.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@ioctl.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@ioctls.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@ioctl.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@ioctls.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@close_range.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@ioctl.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_header_macro.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_max_align_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_null.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_nullptr_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_offsetof.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_ptrdiff_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_size_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_wchar_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdarg.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stddef.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdint.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@alloca.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@byteswap.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@confname.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@cpu-set.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@endian.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@endianness.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@environments.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@errno.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@floatn-common.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@floatn.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@flt-eval-method.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@fp-fast.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@fp-logb.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@getopt_core.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@getopt_posix.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@ioctl-types.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@ioctls.h.blob  (+228 more)
.ccls-cache/@home@runner@workspace/: include@ascii_processor.h.blob  include@video_player.h  include@video_player.h.blob  src@ascii_processor.cpp  src@ascii_processor.cpp.blob  src@main_video.cpp  src@main_video.cpp.blob  src@video_player.cpp  src@video_player.cpp.blob
attached_assets/: Pasted--DOKUMEN-PELENGKAP-OPTIMASI-PROYEK-ASCII-MEDIA-FINAL-INTEGRATION-PROMPT-Tujuan-Menjadika-1761571001691_1761571001693_1761643757987.txt  Pasted-ASCII-PERFECTION-REFACTOR-txt-TUJUAN-OUTPUT-ASCII-ADAPTIF-DAN-PROPORSIONAL-SEMPURNA-Targetnya-1761570746916_1761570746934.txt  promt_1761567827133.text
include/: argparse.h  ascii_processor.h  image.h  print_image.h  stb_image.h
rust/src/: main.rs
src/: argparse.c  image.c  main.c  print_image.c
