[package]
name = "ascii-media"
version = "3.0.0"
edition = "2021"
authors = ["danko12"]
description = "Advanced ASCII media converter and player - converts images, GIFs, videos, and webcam streams to ASCII art in the terminal (integrates tplay functionality)"
repository = "https://github.com/danko12/ASCII-MEDIA"
license = "MIT"
readme = "README.md"
keywords = ["ascii", "media-player", "image-converter", "terminal", "video"]
categories = [
    "command-line-utilities",
    "multimedia",
    "multimedia::video",
    "multimedia::images",
]

# Build configuration for C/C++ integration
[build-dependencies]
cc = "1.0"

[[bin]]
name = "ascii-media"
path = "rust/src/main.rs"

[dependencies]
clap = { version = "4.2", features = ["derive"] }

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
